# agents

./: LANGUAGE_COMPOSITION.md
TaskUI/: README.md
TaskUI/backend/: .gitignore  pyproject.toml  tasks.db-journal
TaskUI/backend/app/: calculator_tool.py  crud.py  database.py  main.py  models.py  schemas.py  seed.py  task_processor_router_agent.py  text_processor_tool.py  weather_tool.py  worker.py
TaskUI/frontend/src/: App.css  App.tsx  index.css  types.ts
TaskUI/frontend/src/api/: client.ts
TaskUI/frontend/src/components/: StepTimeline.tsx  TaskForm.tsx  TaskHistory.tsx  TaskResult.tsx
TaskUI/frontend/src/mock/: taskStore.ts
