[project]
name = "taskui-backend"
version = "0.1.0"
description = "Task UI API - FastAPI + SQLite"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain==0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]
